# clean-skill

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  THREAT_MODEL.md  alembic.ini  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  dynamic.yml
docker/: docker-compose.dev.yml  docker-compose.yml  runner.sh  sandbox.Dockerfile
docs/: ARCHITECTURE.md  rule_format.md
migrations/: env.py
migrations/versions/: 1cb4d8bc552d_baseline.py  5569e5e3cac9_add_scan_result_table.py
rules/credential_harvest/: env_and_key_readers.yml
rules/exfiltration/: webhook_exfiltration.yml
rules/obfuscation/: base64_payload.yml
rules/prompt_injection/: instruction_override.yml  system_role_hijack.yml
src/clean_skill/: __init__.py  __main__.py  cli.py  config.py  models.py  verdict.py
src/clean_skill/api/: __init__.py  main.py
src/clean_skill/crawler/: __init__.py  base.py  scheduler.py
src/clean_skill/crawler/registries/: __init__.py  mcp_registry.py
src/clean_skill/db/: __init__.py  migrations.py
src/clean_skill/dynamic_analysis/: __init__.py  mock_llm.py  sandbox.py
src/clean_skill/ingestion/: __init__.py  autogpt.py  base.py  claude.py  generic.py  langchain.py  mcp.py  openai_gpt.py  openclaw.py
src/clean_skill/jobs/: __init__.py  queues.py  scan_skill.py
src/clean_skill/static_analysis/: __init__.py  engine.py  llm_judge.py  matchers.py  rule.py  secrets.py
src/clean_skill/threat_intel/: __init__.py  db.py  repository.py
src/clean_skill/worker/: __init__.py  __main__.py  entrypoint.py
tests/: conftest.py
tests/fixtures/skills/benign_claude/: SKILL.md
tests/fixtures/skills/benign_mcp/: mcp.json
tests/fixtures/skills/dynamic_target/: SKILL.md  main.py
tests/fixtures/skills/malicious_claude/: SKILL.md
tests/fixtures/skills/malicious_mcp/: mcp.json
tests/integration/: test_sandbox.py
tests/unit/: test_cli.py  test_crawler_scheduler.py  test_ingestion.py  test_matchers.py  test_migrations.py  test_rules.py  test_scan_skill_job.py  test_verdict.py
